fix path to examples

--- a/example_config.yml
+++ b/example_config.yml
@@ -1,8 +1,8 @@
 
-startup_handler: amqpdispatcher.example_startup:startup
+#startup_handler: examples.example_startup:startup
 
 consumers:
-  - consumer: amqpdispatcher.example_consumer:Consumer
+  - consumer: examples.example_consumer:Consumer
     consumer_count: 2
     queue: test_queue
     prefetch_count: 2
