--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "2.6"
   - "2.7"
+before_install: sudo apt-get install -y libevent-dev
 # command to install dependencies
 install: "pip install -r requirements.txt --use-mirrors"
 # command to run tests
