--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ before_install: sudo apt-get install -y libevent-dev
 # command to install dependencies
 install:
     - pip install -r requirements.txt --use-mirrors
-    - pip install -r requirements-$TRAVIS_PYTHON_VERSION --use-mirrors
+    - pip install -r requirements-$TRAVIS_PYTHON_VERSION.txt --use-mirrors
 # command to run tests
 script: nosetests tests/unit tests/integration
