--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
+sudo: false
 language: python
 python:
   - "2.6"
   - "2.7"
-before_install: sudo apt-get install -y libevent-dev
+addons:
+  apt:
+    packages:
+        - libevent-dev
+
 # command to install dependencies
 install:
-    - pip install -r requirements.txt --use-mirrors
-    - pip install -r requirements-$TRAVIS_PYTHON_VERSION.txt --use-mirrors
+  - pip install -r requirements.txt
+  - pip install -r requirements-$TRAVIS_PYTHON_VERSION.txt
 # command to run tests
 script: nosetests tests/unit tests/integration
