--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 coverage
 gevent
-haigha
+haigha>=0.7.3,<1.0
 mock
 nose
-pika
+pika>=0.9.14,<1.0
 pyyaml
 -e git://github.com/lacostej/nosyd.git#egg=nosyd
