--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ language: python
 python:
   - "2.6"
   - "2.7"
+cache:
+  apt: true
+  directories:
+    - $HOME/.pip/download-cache
+    - $HOME/.pip-accel
+    - $HOME/.cache/pip
 addons:
   apt:
     packages:
