--- a/examples/amqp-dispatcher-config.yml
+++ b/examples/amqp-dispatcher-config.yml
@@ -1,5 +1,5 @@
 
-startup_handler: example_startup:startup
+startup_handler: examples.example_startup:startup
 
 queues:
   - queue: test_queue
@@ -13,11 +13,11 @@ queues:
     x_expires: null
     x_message_ttl: null
     bindings:
-      - exchange: test
+      - exchange: amq.direct
         routing_key: queue
 
 consumers:
-  - consumer: example_consumer:Consumer
+  - consumer: examples.example_consumer:Consumer
     consumer_count: 2
     queue: test_queue
     prefetch_count: 2
