--- a/examples/amqp-dispatcher-config.yml
+++ b/examples/amqp-dispatcher-config.yml
@@ -15,9 +15,26 @@ queues:
     bindings:
       - exchange: amq.direct
         routing_key: queue
+  - queue: second_test_queue
+    durable: true
+    auto_delete: false
+    passive: true
+    exclusive: false
+    x_dead_letter_exchange: null
+    x_dead_letter_routing_key: null
+    x_max_length: null
+    x_expires: null
+    x_message_ttl: null
+    bindings:
+      - exchange: amq.direct
+        routing_key: queue
 
 consumers:
   - consumer: examples.example_consumer:Consumer
     consumer_count: 2
     queue: test_queue
+    prefetch_count: 2
+  - consumer: examples.example_secondary_consumer:SecondaryConsumer
+    consumer_count: 2
+    queue: second_test_queue
     prefetch_count: 2
