Specify container names.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   dispatcher:
+    container_name: amqp-dispatcher_dispatcher_1
     build: .
     volumes:
       - .:/app
@@ -11,11 +12,13 @@ services:
       NOMAD_JOB_NAME: 2000
       RABBITMQ_URL: amqp://guest:guest@toxiproxy:25672/
   rabbit:
+    container_name: amqp-dispatcher_rabbit_1
     ports:
       - "15673:15672"
       - "5672:5672"
     image: rabbitmq:management-alpine
   toxiproxy:
+    container_name: amqp-dispatcher_toxiproxy_1
     volumes:
       - ./config:/config
     command: -config /config/toxiproxy.json
