--- a/tests/configuration/multi-config-test.yml
+++ b/tests/configuration/multi-config-test.yml
@@ -28,9 +28,12 @@ queues:
     bindings:
       - exchange: amq.direct
         routing_key: queue
-
 consumers:
   - consumer: examples.example_consumer:Consumer
-    consumer_count: 1
+    consumer_count: 2
     queue: test_queue
-    prefetch_count: 2
+    prefetch_count: 1
+  - consumer: examples.example_secondary_consumer:SecondaryConsumer
+    consumer_count: 3
+    queue: second_test_queue
+    prefetch_count: 4
