--- a/tests/integration/consumption-test.yml
+++ b/tests/integration/consumption-test.yml
@@ -2,7 +2,7 @@
 startup_handler: examples.example_startup:startup
 
 queues:
-  - queue: test_queue
+  - queue: con_queue_one
     durable: true
     auto_delete: false
     passive: true
@@ -14,8 +14,8 @@ queues:
     x_message_ttl: null
     bindings:
       - exchange: amq.direct
-        routing_key: test_queue
-  - queue: second_test_queue
+        routing_key: con_queue_one
+  - queue: con_queue_two
     durable: true
     auto_delete: false
     passive: true
@@ -27,14 +27,14 @@ queues:
     x_message_ttl: null
     bindings:
       - exchange: amq.direct
-        routing_key: second_test_queue
+        routing_key: con_queue_two
 
 consumers:
-  - consumer: examples.example_consumer:Consumer
-    consumer_count: 2
-    queue: test_queue
-    prefetch_count: 2
-  - consumer: examples.example_secondary_consumer:SecondaryConsumer
+  - consumer: tests.consumers.forever_consumer:ForeverConsumer
     consumer_count: 3
-    queue: second_test_queue
-    prefetch_count: 4
+    queue: con_queue_one
+    prefetch_count: 0
+  - consumer: tests.consumers.forever_consumer:ForeverConsumer2
+    consumer_count: 2
+    queue: con_queue_two
+    prefetch_count: 0
