--- a/tests/integration/consumption-test.yml
+++ b/tests/integration/consumption-test.yml
@@ -28,6 +28,32 @@ queues:
     bindings:
       - exchange: amq.direct
         routing_key: con_queue_two
+  - queue: immediate_queue_one
+    durable: true
+    auto_delete: false
+    passive: true
+    exclusive: false
+    x_dead_letter_exchange: null
+    x_dead_letter_routing_key: null
+    x_max_length: null
+    x_expires: null
+    x_message_ttl: null
+    bindings:
+      - exchange: amq.direct
+        routing_key: immediate_queue_one
+  - queue: immediate_queue_two
+    durable: true
+    auto_delete: false
+    passive: true
+    exclusive: false
+    x_dead_letter_exchange: null
+    x_dead_letter_routing_key: null
+    x_max_length: null
+    x_expires: null
+    x_message_ttl: null
+    bindings:
+      - exchange: amq.direct
+        routing_key: immediate_queue_two
 
 consumers:
   - consumer: tests.consumers.forever_consumer:ForeverConsumer
@@ -37,4 +63,12 @@ consumers:
   - consumer: tests.consumers.forever_consumer:ForeverConsumer2
     consumer_count: 2
     queue: con_queue_two
+    prefetch_count: 0
+  - consumer: tests.consumers.immediate_consumer:ImmediateConsumer
+    consumer_count: 4
+    queue: immediate_queue_one
+    prefetch_count: 0
+  - consumer: tests.consumers.immediate_consumer:ImmediateConsumer2
+    consumer_count: 1
+    queue: immediate_queue_two
     prefetch_count: 0
