Relax and specify more requirement versions.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-aio-pika==6.1.2
-black==19.3b0
-coverage
-csvkit==1.0.4
-mock
-mypy==0.730
-pika==1.1.0
-pytest-asyncio==0.10.0
-pytest==5.1.2
-pyyaml
+aio-pika>=6.1.2
+black>=19.3b0
+coverage>=4.5.4
+csvkit>=1.0.4
+mock>=3.0.5
+mypy>=0.730
+pytest-asyncio>=0.10.0
+pytest>=5.1.2
+pyyaml>=5.1.2
