--- a/examples/amqp-dispatcher-config.yml
+++ b/examples/amqp-dispatcher-config.yml
@@ -12,6 +12,7 @@ queues:
     x_max_length: null
     x_expires: null
     x_message_ttl: null
+    x_queue_type: null
     bindings:
       - exchange: amq.direct
         routing_key: test_queue
@@ -25,6 +26,7 @@ queues:
     x_max_length: null
     x_expires: null
     x_message_ttl: null
+    x_queue_type: quorum
     bindings:
       - exchange: amq.direct
         routing_key: second_test_queue
