--- a/tests/integration/disconnection-test.yml
+++ b/tests/integration/disconnection-test.yml
@@ -12,6 +12,7 @@ queues:
     x_max_length: null
     x_expires: null
     x_message_ttl: null
+    x_queue_type: null
     bindings:
       - exchange: amq.direct
         routing_key: disco_queue
