--- a/tests/integration/proxy-test.yml
+++ b/tests/integration/proxy-test.yml
@@ -12,6 +12,7 @@ queues:
     x_max_length: null
     x_expires: null
     x_message_ttl: null
+    x_queue_type: null
     bindings:
       - exchange: amq.direct
         routing_key: main_proxy_queue
@@ -25,6 +26,7 @@ queues:
     x_max_length: null
     x_expires: null
     x_message_ttl: null
+    x_queue_type: null
     bindings:
       - exchange: amq.direct
         routing_key: publish_queue
