--- a/examples/amqp-dispatcher-config.yml
+++ b/examples/amqp-dispatcher-config.yml
@@ -26,7 +26,7 @@ queues:
     x_max_length: null
     x_expires: null
     x_message_ttl: null
-    x_queue_type: quorum
+    x_queue_type: null
     bindings:
       - exchange: amq.direct
         routing_key: second_test_queue
